bugfix - Melhorias em performance de paginação do empréstimo resolvendo problemas N+1 e envio assíncrono de email por evento